[package]
name = "launchdarkly-server-sdk"
description = "LaunchDarkly Server-Side SDK"
version = "1.0.0-beta.4"
authors = ["LaunchDarkly"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://docs.launchdarkly.com/sdk/server-side/rust"
repository = "https://github.com/launchdarkly/rust-server-sdk"
keywords = ["launchdarkly", "launchdarkly-sdk", "feature-flags", "feature-toggles"]
exclude = [
    "coverage.sh"
]

[dependencies]
chrono = { version = "0.4.23", default-features = false, features = ["std"] }
crossbeam-channel = "0.5.1"
data-encoding = "2.3.2"
eventsource-client = { git = "https://github.com/MaterializeInc/rust-eventsource-client", default_features = false }
futures = "0.3.12"
lazy_static = "1.4.0"
log = "0.4.14"
lru = { version = "0.8.1", default_features = false }
reqwest = { version = "0.11.13", default_features = false, features = ["blocking", "json"] }
ring = "0.16.20"
launchdarkly-server-sdk-evaluation = { git = "https://github.com/MaterializeInc/rust-server-sdk-evaluation" }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = { version = "1.0.73", features = ["float_roundtrip"] }
thiserror = "1.0"
tokio = { version = "1.2.0", features = ["rt-multi-thread"] }
threadpool = "1.8.1"
parking_lot = "0.12.0"
tokio-stream = { version = "0.1.8", features = ["sync"] }
moka = { version = "0.9.6", default_features = false, features = ["sync", "atomic64"]} # do not pull quanta
uuid = {version = "1.0.0-alpha.1", features = ["v4"] }

[dev-dependencies]
maplit = "1.0.1"
env_logger = "0.10.0"
serde_json = { version = "1.0.73", features = ["preserve_order"] } # for deterministic JSON testing
tokio = { version = "1.2.0", features = ["macros", "time"] }
test-case = "2.0.0"
mockito = "0.31.0"

[[example]]
name = "print_flags"

[[example]]
name = "progress"

[build-dependencies]
built = "0.5.1"

[features]
default = ["rustls"]
rustls = ["eventsource-client/rustls", "reqwest/rustls-tls"]
hypertls = ["eventsource-client/hypertls", "reqwest/hyper-tls"]
